[tool.poetry]
name = "pylint_standalone"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Pylint = "2.15.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
